Adiciona estilos e atualizações no index

--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
     <link
       rel="shortcut icon"
       href="imagens/favicon.ico"
-      type="image/
-    x-icon"
+      type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
+    
   </head>
 
   <body>
     <header>
-      <h1 class="headerTittles">Curiosidades de Tecnologia</h1>
-      <h2 class="headerTittles">
+      <h1 id="headerTittle">CURIOSIDADES DE TECNOLOGIA</h1>
+      <p id="headerSubTittle">
         Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único
         lugar
-      </h2>
+      </p>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Notícias</a>
+        <a href="#">Curiosidades</a>
+        <a href="#">Fale Conosco</a>
+      </nav>
     </header>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Notícias</a>
-      <a href="#">Curiosidades</a>
-      <a href="#">Fale Conosco</a>
-    </nav>
     <main>
       <article>
-        <h1>História do Mascote do Android</h1>
+        <h1 id ="mainTittle">História do Mascote do Android</h1>
         <p>
           Provavelmente você sabe que o sistema operacional Android, mantido
           pelo Google é um dos mais utilizados para dispositivos móveis em todo
@@ -38,7 +38,7 @@
           aprender muita coisa sobre esse robozinho.
         </p>
         <section>
-          <h2>A primeira versão</h2>
+          <h2 class="mainSubTittles">A primeira versão</h2>
           <p>
             A primeira tentativa de criar um mascote surgiu em 2007 e veio de um
             desenvolvedor chamado <a href="#">Dan Morrill</a> &#x1F517. Ele conta que
@@ -63,7 +63,7 @@
           </figure>
         </section>
         <section>
-          <h2>Surge um novo mascote</h2>
+          <h2 class="mainSubTittles">Surge um novo mascote</h2>
           <p>
             A ideia de ter um mascote foi amadurecendo e a missão foi passada
             para uma profissional da área. A ilustradora Russa
@@ -110,7 +110,7 @@
         </section>
         <section>
           <div>
-            <h2>Quer aprender mais?</h2>
+            <h2 id="querAprenderMais">Quer aprender mais?</h2>
             <p>
               Outro assunto curioso em relação ao Android é que cada versão
               sempre foi nomeada em homenagem a um doce, em ordem alfabética a
